2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-12-01  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (ftp::StateHandler): See last entry. The condition to
	  invoke a report for a failure of the regex was wrong, and
	  missing a negation. Fixed this. Also cleaned up the regexp, it
	  had a caret to much in it. Thanks to <nafis@crd.ge.com> for
	  reporting this. The bug report is at -->
	  http://bugs.activestate.com/show_bug.cgi?id=28433, and not on
	  SourceForge.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (ftp::StateHandler): Accepted change to the regexp
	  pattern to handle irregular input better. [Bug 739393]. Also
	  added code to handle future regex failures better.

2003-07-28 Aaron Faupell <afaupell@users.sourceforge.net>

	* ftp.tcl: fixed bug #753770, added verbose flag check in
	  ElapsedTime.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl:
	* ftp.man:
	* ftp_geturl.tcl:
	* pkgIndex.tcl: Fixed bug #614591. Set version of the package to
	  to 2.4. Set version of geturl package to 0.2.

2003-03-31  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (ModTime): Applied patch #659238 supplied by Dan Rogahn
	  <ddrogahn@users.sourceforge.net> to allow setting the
	  modification time of a file, assuming the server allows this as
	  well.

2003-03-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ftp.tcl (ftp::InitDataConn): revert -regexp to fix bug 701288.
